@@ -13,7 +13,7 @@
     <parent>
         <groupId>io.airlift</groupId>
         <artifactId>airbase</artifactId>
-        <version>129</version>
+        <version>130</version>
     </parent>
 
     <inceptionYear>2010</inceptionYear>
